--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "keywords": [],
   "dependencies": {
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
